@@ -1,3 +1,15 @@
+2011-02-26  James Simonsen  <simonjam@chromium.org>
+
+        Reviewed by Tony Gentilcore.
+
+        [Web Timing] loadEvent timing should refer to first load event if there are many
+        https://bugs.webkit.org/show_bug.cgi?id=55201
+
+        Test: fast/dom/webtiming-document-open.html
+
+        * page/DOMWindow.cpp:
+        (WebCore::DOMWindow::dispatchLoadEvent):
+
 2011-02-26  Tony Gentilcore  <tonyg@chromium.org>
 
         Reviewed by Adam Barth.
